mapsize now reads from config file, edited robot constructor

--- a/src/main/java/za/co/wethinkcode/robotworlds/server/config.properties
+++ b/src/main/java/za/co/wethinkcode/robotworlds/server/config.properties
@@ -1,8 +1,7 @@
-repair = 3
-size = 100,100
-map = BasicMap;
 visibility = 9
-shield = 5
+repair = 3
 reload = 3
+maxShield = 5
+mapSize = 100,100
 
 
