--- a/src/main/java/za/co/wethinkcode/robotworlds/server/config.properties
+++ b/src/main/java/za/co/wethinkcode/robotworlds/server/config.properties
@@ -2,6 +2,9 @@ visibility = 9
 repairTime = 3
 reloadTime = 3
 maxShield = 5
-mapSize = 100,100
+map = MazeMap
+mapSize = 20,20
+port = 5000
+tickRate = 50
 
 
