fixed test map loading

--- a/src/main/java/za/co/wethinkcode/robotworlds/server/config.properties
+++ b/src/main/java/za/co/wethinkcode/robotworlds/server/config.properties
@@ -1,10 +1,10 @@
-visibility = 9
-repairTime = 3
-reloadTime = 3
-maxShield = 5
-map = MazeMap
-mapSize = 20,20
-port = 5000
-tickRate = 50
-
-
+#Test config override
+#Thu May 12 11:26:10 SAST 2022
+map=EmptyMap
+mapSize=20,20
+maxShield=5
+port=5000
+reloadTime=3
+repairTime=3
+tickRate=50
+visibility=9
