tweaked tests to revert to old value and removed dead code

--- a/src/main/java/za/co/wethinkcode/robotworlds/server/config.properties
+++ b/src/main/java/za/co/wethinkcode/robotworlds/server/config.properties
@@ -1,6 +1,6 @@
 #Test config override
-#Thu May 12 11:26:10 SAST 2022
-map=EmptyMap
+#Thu May 12 11:53:11 SAST 2022
+map=MazeMap
 mapSize=20,20
 maxShield=5
 port=5000
